<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <TextView
        android:id="@+id/labelUb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="133dp"
        android:text="@string/labelUb"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lblId"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_below="@+id/labelUb"
        android:layout_centerHorizontal="true"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/labelInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/labelInfo"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/contentOfMara"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="180dp"
        android:text="@string/contentOfMara"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/labelOtroLugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/labelUb"
        android:layout_marginBottom="146dp"
        android:text="@string/labelOtroLugar"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lblCerca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="123dp"
        android:textSize="18sp" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="21dp"
        android:layout_marginStart="0dp"
        android:text="@string/toggleButton"
        android:textOff="Ubicarme"
        android:textOn="Dejar de ubicarme" />

    <CheckBox
        android:id="@+id/allowGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/toggleButton"
        android:layout_alignParentStart="true"
        android:layout_marginStart="39dp"
        android:text="@string/checkbox" />

</RelativeLayout>